name:                hello-inline-java
version:             0
build-type:          Simple
cabal-version:       >=1.25

executable hello-inline-java
  main-is:             Main.hs
  build-depends:       base        ^>= 4.9
               ,       inline-java ^>= 0.5.1
               ,       jvm         ^>= 0.1.1
               ,       text        ^>= 1.2.2
  default-language:    Haskell2010
